<resources>
    <string name="app_name">CarGame</string>
    <string name="initial_score">0</string>
    <string name="heart_img">Heart</string>
    <string name="car_img">Car</string>
    <string name="start_btn_img">Start</string>
    <string name="block_img">Block</string>
    <string name="left_btn_img">Left</string>
    <string name="right_btn_img">Right</string>
    <string name="choose_mode">Choose Mode:</string>
    <string name="start_btn_text">Start Game</string>
    <string name="sensors">Sensors</string>
    <string name="buttons_fast">2 Buttons - Fast</string>
    <string name="buttons_slow">2 Buttons - Slow</string>
    <string name="leaderboard_btn_txt">Leaderboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recycleritem_player_name">Name</string>
    <string name="recycleritem_player_datetime">DateTime</string>
    <string name="recycleritem_player_score">Score</string>
</resources>